--- a/serenity.properties
+++ b/serenity.properties
@@ -8,18 +8,27 @@ webdriver.provided.type=mydriver
 serenity.driver.capabilities=mydriver
 #webdriver.remote.driver=chrome
 platform=LINUX
-chrome.switches = --headless
-
-#webdriver.timeouts.implicitlywait=12000
-#webdriver.wait.for.timeout=12000
-serenity.timeout=2000
+chrome.switches=--headless
+webdriver.timeouts.implicitlywait=12000
+webdriver.wait.for.timeout=12000
+serenity.timeout=12000
 serenity.console.colors=true
 #serenity.use.unique.browser=true
-serenity.take.screenshots = FOR_FAILURES
-
+serenity.take.screenshots=FOR_FAILURES
 #Dice DASHBOARD URL
 dice.base.url=https://mio-aqa-candidates.dc.dice.fm/dashboard
-
-#Integrated Environments backoffice/hac login details
+#MIO login details
 mio.username=client_admin_auto@dice.fm
 mio.password=musicforever
+#Authentication details
+mio.phoneNumber=07880222984
+mio.code=0000
+#Payment card  details
+mio.cardNumber=4111 1111 1111 1111
+mio.expiryDate=12/24
+mio.cvc=476
+mio.postcode=MK11 4RT
+
+
+
+
